services/211.servarr/servarr.22.readarr.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: readarr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: readarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: readarr
    spec:
      containers:
        - name: readarr
          image: ghcr.io/hotio/readarr:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8787
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /app/public/images
            - name: data
              mountPath: /data
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: readarr-config
        - name: data
          persistentVolumeClaim:
            claimName: readarr-data
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
