services/211.servarr/servarr.05.qbittorrent.ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: qbittorrent
  namespace: servarr
  labels:
    app.kubernetes.io/name: qbittorrent
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: cloudflare-issuer-dni-sh
spec:
  rules:
    - host: qbit.dni.sh
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: qbittorrent
                port:
                  name: http
  tls:
    - hosts:
        - qbit.dni.sh
      secretName: qbit-dni-sh-certificate
