services/211.servarr/servarr.14.prowlarr.ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prowlarr
  namespace: servarr
  labels:
    app.kubernetes.io/name: prowlarr
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: cloudflare-issuer-dni-sh
spec:
  rules:
    - host: prowlarr.dni.sh
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prowlarr
                port:
                  name: http
  tls:
    - hosts:
        - prowlarr.dni.sh
      secretName: reader-dni-sh-certificate
